--- a/main.tex
+++ b/main.tex
@@ -224,34 +224,34 @@
       \begin{enumerate}[label=\alph*.]
         \begin{minipage}{0.45\textwidth}
           \item \begin{mdframed}[style=AnswerFrame]
-            Placeholder.
+            7
             \end{mdframed}
           \item \begin{mdframed}[style=AnswerFrame]
-            Placeholder.
-            \end{mdframed}
-        \end{minipage}\hfill
-        \begin{minipage}{0.45\textwidth}
-          \item \begin{mdframed}[style=AnswerFrame]
-            Placeholder.
-            \end{mdframed}
-          \item \begin{mdframed}[style=AnswerFrame]
-            Placeholder.
+            @
             \end{mdframed}
         \end{minipage}\hfill
         \begin{minipage}{0.45\textwidth}
           \item \begin{mdframed}[style=AnswerFrame]
-            Placeholder.
+            S
             \end{mdframed}
           \item \begin{mdframed}[style=AnswerFrame]
-            Placeholder.
+            J
             \end{mdframed}
         \end{minipage}\hfill
         \begin{minipage}{0.45\textwidth}
           \item \begin{mdframed}[style=AnswerFrame]
-            Placeholder.
+            *
             \end{mdframed}
           \item \begin{mdframed}[style=AnswerFrame]
-            Placeholder.
+            ;
+            \end{mdframed}
+        \end{minipage}\hfill
+        \begin{minipage}{0.45\textwidth}
+          \item \begin{mdframed}[style=AnswerFrame]
+            w
+            \end{mdframed}
+          \item \begin{mdframed}[style=AnswerFrame]
+            (
             \end{mdframed}
         \end{minipage}
       \end{enumerate}
@@ -284,16 +284,16 @@ int mystery(int x, double y, char ch) {
         \begin{enumerate}[label=\alph*.]
           \begin{minipage}{0.45\textwidth}
             \item \begin{mdframed}[style=AnswerFrame]
-              Placeholder.
+              $117$
               \end{mdframed}
             \item \begin{mdframed}[style=AnswerFrame]
-              Placeholder.
+              $-27$
               \end{mdframed}
           \end{minipage}\hfill
           \begin{minipage}{.45\textwidth}
-          \item \begin{mdframed}[style=AnswerFrame]
-            Placeholder.
-            \end{mdframed}
+            \item \begin{mdframed}[style=AnswerFrame]
+              $-130$
+              \end{mdframed}
         \end{minipage}
     \end{enumerate}
     
@@ -348,18 +348,18 @@ cout << "Programming II." <<endl;
       \begin{enumerate}[label=\alph*.]
         \begin{minipage}{0.45\textwidth}
           \item \begin{mdframed}[style=AnswerFrame]
-            Placeholder.
+            Take Programming I.
             \end{mdframed}
           \item \begin{mdframed}[style=AnswerFrame]
-            Placeholder.
+            Take Programming II.
             \end{mdframed}
         \end{minipage}\hfill
         \begin{minipage}{.45\textwidth}
           \item \begin{mdframed}[style=AnswerFrame]
-            Placeholder.
+            Take Invalid input. You must enter a 1 or 2
             \end{mdframed}
           \item \begin{mdframed}[style=AnswerFrame]
-            Placeholder.
+            Take Invalid input. You must enter a 1 or 2
             \end{mdframed}
         \end{minipage}
       \end{enumerate}
@@ -418,15 +418,20 @@ void traceMe(double x, double y) {
     \begin{enumerate}[label=\alph*.]
       \begin{minipage}{0.45\textwidth}
         \item \begin{mdframed}[style=AnswerFrame]
-          Placeholder.
+          3.00, 625.00, 8.33\\
+          625.00, 3.00, 0.00
           \end{mdframed}
         \item \begin{mdframed}[style=AnswerFrame]
-          Placeholder.
+          24.00, 1024.00, 1.33\\
+          1024.00, 24.00, 0.00
           \end{mdframed}
       \end{minipage}\hfill
       \begin{minipage}{.45\textwidth}
         \item \begin{mdframed}[style=AnswerFrame]
-          Placeholder.
+          Enter a nonzero number: \textit{0, 196}\\
+
+          0.00, 196.00, 1.00\\
+          196.00, 0.00, 0.00
           \end{mdframed}
       \end{minipage}
     \end{enumerate}
@@ -470,18 +475,18 @@ void defaultParam(int num1, int num2 = 7, double z = 2.5) {
     \begin{enumerate}[label=\alph*.]
       \begin{minipage}{0.45\textwidth}
         \item \begin{mdframed}[style=AnswerFrame]
-          Placeholder.
+          $num3=-2$
           \end{mdframed}
         \item \begin{mdframed}[style=AnswerFrame]
-          Placeholder.
+          $num3=-8$
           \end{mdframed}
       \end{minipage}\hfill
       \begin{minipage}{.45\textwidth}
         \item \begin{mdframed}[style=AnswerFrame]
-          Placeholder.
+          $num3=-6$
           \end{mdframed}
         \item \begin{mdframed}[style=AnswerFrame]
-          Placeholder.
+          $num3=-2$
           \end{mdframed}
       \end{minipage}
     \end{enumerate}
